--- a/index.html
+++ b/index.html
@@ -63,22 +63,14 @@
 			z-index: 2;
 		}
 
-		.nav-list {
+		/* .nav-list {
 			font-family: 'Courier New', Courier, monospace;
-			/* Stylish font family */
 			font-style: italic;
-			/* Italicize text */
 			font-size: 18px;
-			/* Adjust font size */
 			font-weight: bold;
-			/* Make text bold */
-
-			/* Set text color */
 			letter-spacing: 1px;
-			/* Optional: Add letter spacing for style */
 			text-transform: uppercase;
-			/* Optional: Make text uppercase for more impact */
-		}
+		} */
 	</style>
 </head>
 
@@ -97,10 +89,12 @@
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo"><a class="nav-brand" href="index.html">
-						<!-- <img src="images/logo/icms.png" alt="Logo" class="mega-white-logo" />
-						<img src="images/logo/icms.png" alt="Logo" class="mega-darks-logo" /> -->
-						<h2>Night Life Tours</h2>
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-white-logo" />
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-darks-logo" />
 					</a>
+				</div>
+				<div class="site-title">
+					<h4>Night Life Tours</h4>
 				</div>
 				<div class="custom-nav" role="navigation">
 					<ul class="nav-list">
@@ -113,25 +107,24 @@
 						</li>
 
 						<li>
-							<a href="gallery.html" class="menu-links">Gallery</a>
+							<a href="gallery_photo.html" class="menu-links">Gallery Photos</a>
+						</li>
+						<li>
+							<a href="gallery_video.html" class="menu-links">Gallery Videos</a>
 						</li>
 
 						<li class="sbmenu rpdropdown">
-							<a href="#" class="menu-links">Services</a>
+							<a href="#" class="menu-links">Youtube Links</a>
 							<div class="nx-dropdown menu-dorpdown">
 								<div class="sub-menu-section">
 									<div class="sub-menu-center-block">
 										<div class="sub-menu-column smfull">
 											<ul>
-												<li><a href="pattaya.html">Pattaya</a> </li>
-												<li><a href="best_things.html">Best Things to do in Pattaya with your
-														wife</a>
-												</li>
-												<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-												<li><a href="places_avoid.html">Places to avoid when you are with your
-														wife</a> </li>
-
-												<li><a href="bali.html">Bali</a> </li>
+												<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+												<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+												<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+												<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+												<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 											</ul>
 										</div>
 									</div>
@@ -169,21 +162,21 @@
 					<li>
 						<a href="about-us.html">About Us</a>
 					</li>
-
 					<li>
-						<a href="gallery.html">Gallery</a>
+						<a href="gallery_photo.html">Gallery Photos</a>
+					</li>
+					<li>
+						<a href="gallery_video.html">Gallery Videos</a>
 					</li>
 
 					<li>
-						<a href="#">Services</a>
+						<a href="#">Youtube Links</a>
 						<ul>
-							<li><a href="pattaya.html">Pattaya</a> </li>
-							<li><a href="best_things.html">Best Things to do in Pattaya with your wife</a>
-							</li>
-							<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-							<li><a href="places_avoid.html">Places to avoid when you are with your wife</a> </li>
-
-							<li><a href="bali.html">Bali</a> </li>
+							<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+							<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+							<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+							<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+							<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 						</ul>
 					</li>
 
@@ -218,7 +211,6 @@
 					<div class="media-body getintouchinfo">
 						<a href="tel:+919600063175" target="_blank">+91 9600063175</a>
 						<a href="tel:+919551077109" target="_blank">+91 9551077109</a>
-						<a href="tel:+61 452 283 029" target="_blank">+61 452 283 029</a>
 						<span>Mon-Fri 9am - 6pm</span>
 					</div>
 				</div>
@@ -274,9 +266,9 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div data-swiper-parallax="300" class="slide-title">
-										<h3 class="text-white">Experience the Best Nightlife Across Goa, Thailand, Bali
-											&
-											Malaysia!</h3>
+										<h5 class="text-white">Enjoy Safe & Secure +18 Trip With Night life tours with
+											Any Scam ( Bangkok | Pattaya | Phuket | Bali | Malaysia | Vietnam | Cambodia
+											| Dubai | Singapore | Srilanka )</h5>
 									</div>
 									<div class="clearfix"></div>
 									<div data-swiper-parallax="500" class="slide-btns">
@@ -297,13 +289,14 @@
 
 				<div class="swiper-slide">
 					<div class="slide-inner slide-bg-image background-image"
-						data-background="./img/nightlife/slider11.jpg">
+						data-background="./img/nightlife/slider-2.jpeg">
 						<div class="gradient-overlay"></div> <!-- Gradient overlay -->
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
 									<div data-swiper-parallax="300" class="slide-title">
-										<h3 class="text-white">Unforgettable Nights - Pubs, Clubs, Cafes & More!</h3>
+										<h5 class="text-white">Enjoy Best Verified Contact for Pub | Bar | Disco |
+											Massage | We give Free Contacts but Enjoy on your own Risk only</h5>
 									</div>
 									<div class="clearfix"></div>
 									<div data-swiper-parallax="500" class="slide-btns">
@@ -322,14 +315,14 @@
 
 				<div class="swiper-slide">
 					<div class="slide-inner slide-bg-image background-img"
-						data-background="./img/nightlife/slider3.jpg">
+						data-background="./img/nightlife/slider31.png">
 						<div class="gradient-overlay"></div> <!-- Gradient overlay -->
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
 									<div data-swiper-parallax="300" class="slide-title">
-										<h3 class="text-white">Join the Ultimate Nightlife Adventure - Party, Relax,
-											Enjoy!</h3>
+										<h5 class="text-white">We do Budget | Economic | Luxury | Premium & Elite ( 1*
+											to 5* On Request )</h5>
 									</div>
 									<div class="clearfix"></div>
 									<div data-swiper-parallax="500" class="slide-btns">
@@ -624,8 +617,7 @@
 								<span><i class="fas fa-phone-alt"></i></span>
 								<p>Phone <span> <a href="tel:+919600063175" target="_blank">
 											+91 9600063175</a> | <a href="tel:+919551077109" target="_blank">
-											+91 9551077109</a> | <a href="tel:+61 452 283 029" target="_blank">
-											+61 452 283 029</a> </span></p>
+											+91 9551077109</a> </span></p>
 							</li>
 							<div class="d-flex">
 								<!-- <li>
@@ -646,8 +638,7 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-							class="text-primary"><a href="https://pojotechnology.com/" target="_blank">Pojo
-								Technology</a></b></p>
+							class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
 				</div>
 			</div>
 		</div>
