--- a/pattaya.html
+++ b/pattaya.html
@@ -30,10 +30,12 @@
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo"><a class="nav-brand" href="index.html">
-						<!-- <img src="images/logo/icms.png" alt="Logo" class="mega-white-logo" />
-						<img src="images/logo/icms.png" alt="Logo" class="mega-darks-logo" /> -->
-						<h2>Night Life Tours</h2>
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-white-logo" />
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-darks-logo" />
 					</a>
+				</div>
+				<div class="site-title">
+					<h4>Night Life Tours</h4>
 				</div>
 				<div class="custom-nav" role="navigation">
 					<ul class="nav-list">
@@ -44,27 +46,25 @@
 						<li>
 							<a href="about-us.html" class="menu-links">About Us</a>
 						</li>
-
 						<li>
-							<a href="gallery.html" class="menu-links">Gallery</a>
+							<a href="gallery_photo.html" class="menu-links">Gallery Photos</a>
+						</li>
+						<li>
+							<a href="gallery_video.html" class="menu-links">Gallery Videos</a>
 						</li>
 
 						<li class="sbmenu rpdropdown">
-							<a href="#" class="menu-links">Services</a>
+							<a href="#" class="menu-links">Youtube Links</a>
 							<div class="nx-dropdown menu-dorpdown">
 								<div class="sub-menu-section">
 									<div class="sub-menu-center-block">
 										<div class="sub-menu-column smfull">
 											<ul>
-												<li><a href="pattaya.html">Pattaya</a> </li>
-												<li><a href="best_things.html">Best Things to do in Pattaya with your
-														wife</a>
-												</li>
-												<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-												<li><a href="places_avoid.html">Places to avoid when you are with your
-														wife</a> </li>
-
-												<li><a href="bali.html">Bali</a> </li>
+												<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+												<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+												<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+												<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+												<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 											</ul>
 										</div>
 									</div>
@@ -106,18 +106,22 @@
 					<li>
 						<a href="gallery.html">Gallery</a>
 					</li>
+					<li>
+						<a href="gallery_photo.html">Gallery Photos</a>
+					</li>
+					<li>
+						<a href="gallery_video.html">Gallery Videos</a>
+					</li>
 
 					<li>
-						<a href="#">Services</a>
+						<a href="#">Youtube Links</a>
 						<ul>
-							<li><a href="pattaya.html">Pattaya</a> </li>
-							<li><a href="best_things.html">Best Things to do in Pattaya with your wife</a>
-							</li>
-							<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-							<li><a href="places_avoid.html">Places to avoid when you are with your wife</a> </li>
+							<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+							<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+							<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+							<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+							<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 
-							<li><a href="bali.html">Bali</a> </li>
-							
 						</ul>
 					</li>
 
@@ -150,7 +154,6 @@
 					<div class="media-body getintouchinfo">
 						<a href="tel:+919600063175" target="_blank">+91 9600063175</a>
 						<a href="tel:+919551077109" target="_blank">+91 9551077109</a>
-						<a href="tel:+61 452 283 029" target="_blank">+61 452 283 029</a>
 						<span>Mon-Fri 9am - 6pm</span>
 					</div>
 				</div>
@@ -192,93 +195,86 @@
 			</div>
 		</div>
 	</div>
-
-	<section class="breadcrumb-areav2" data-background="">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-7">
-					<div class="bread-titlev2">
-						<h1 class="wow fadeInUp" data-wow-delay=".2s">Pattaya</h1>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="service-block pad-tb light-dark">
+	<section class="service pad-tb all-bg mt60">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<div class="common-heading ptag">
-						<h2>Night Life Tour with Pattaya </h2>
-						<!-- <span></span> -->
-					</div>
-				</div>
-				<p class="text-center">The nightlife of the party city Pattaya is quite famous across the world. The
-					sheer scale of the walking street can be a bit overwhelming for you. Go-Go bars, party areas, dozens
-					of nightclubs, countless beer bars in the city will always give a unique and different experience
-					not only to the beginners but to regular tourists as well.</p>
-			</div>
-			<div class="row upset justify-content-center mt60">
-				<div class="col-lg-4 v-center order1">
-					<div class="image-block1">
-						<img src="img/nightlife/service1.jpg" alt="Process" class="img-fluid" />
-					</div>
-				</div>
-				<div class="col-lg-7 v-center order2">
-					<div class="ps-block">
-						<h3>Why choose Pattaya?</h3>
-						<p class="text-justify">The nightlife in Thailand is unique, especially in Pattaya. If you are
-							planning to visit this iconic city with your wife, this ultimate guide will give you a rough
-							idea of what to expect on your walk through Pattaya’s wild side. This will help you to arm
-							yourself with enough knowledge about what to do when you are with your wife.
-						</p>
-						<p>Hope this will clear your doubts and confusion and ensure what to expect from your trip to
-							Pattaya when you go with your better half.</p>
+						<h2>LUXURY PLUS -➕🔞</h2>
+						<span> ( Pattaya 3Nts - 100 % Pure Adult Trip )</span>
 					</div>
 				</div>
 			</div>
-
-		</div>
-	</section>
-	<section class="service pad-tb all-bg">
-		<div class="container">
 			<div class="row">
-				<div class="col-lg-8 block-1">
+				<div class="col-lg-6 block-1">
 					<div class="common-heading text-l pl25">
-						<h2>Tourist Police in Pattaya</h2>
-						<p class="text-justify">The Tourist Police volunteers are mostly westerners who help travelers with any kind of problems by acting as translators and intermediaries. The tourist police have posts and patrols along Walking Street every night. You can contact them by dialing 1155 for any kind of issue.</p>
-						<p class="text-justify"><b class="text-white">Pattaya Helpline: 1337</b></p>
-						<p class="text-justify"><b class="text-white">Police Emergency: 191</b></p>
+						<h5>Package Details</h5>
+						<p class="text-justify">Price Per Person Rs 9900/- ( if 4 Person )</p>
+						<p>Price Per Person Rs 9000/- ( if 6 Person )</p>
+						<p>Price Per Person Rs 7000/- ( if 10 to 12 Person ) </p>
+						<p>Price Per Person Rs 22500/- ( if 1 Single & Solo Trip ) </p>
+						<p>Pattaya Stay : 3 Mins to Walk in Street Indian Hotel With Pool & Spa</p>
 					</div>
 				</div>
-				<div class="col-lg-4">
-					<div class="image-block wow fadeIn">
-						<img src="img/nightlife/ser51.jpg" alt="image" class="img-fluid no-shadow" />
-					</div>
+				<div class="col-lg-6">
+					<h5>Sightseeing Includes with Entrance Only </h5>
+					<p class="text-justify"><span class="text-primary">Day 1 </span>Dmk Airport Transfer Tiger Topio
+						with Crocodile Show Break fast Morning Check in Hotel </p>
+					<p><span class="text-primary">Day 2 </span>Coral Island with Lunch ( 9am to 14.30hrs )</p>
+					<p><span class="text-primary">Day 3 </span>Pattaya City & Temple Tour | Free Drop to Honey Soap -
+						Massage ( Pay & Use for Sap )</p>
+					<p><span class="text-primary">Day 4 </span>Check out Pattaya - 11.30 keep luggage in Reception go
+						Lunch & Shopping back to Hotel by 15hrs Cab Start 15.30hrs Airport Drop - 18hrs ( Flight @ 21hrs
+						)</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="service pad-tb all-bg">
+	<section class="work pt-5 pb-5">
+		<div class="container">
+			<div class="row mt30">
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.3s">
+					<img src="img/nightlife/pattaya_pack/img1.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.5s">
+					<img src="img/nightlife/pattaya_pack/img2.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.1s">
+					<img src="img/nightlife/pattaya_pack/img3.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
+					<img src="img/nightlife/pattaya_pack/img4.jpeg" alt="img">
+				</div>
+				<div class="col-lg-3 col-sm-6 col-6 wow fadeIn mb-3" data-wow-delay="0.7s">
+					<img src="img/nightlife/pattaya_pack/img5.jpeg" alt="img">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- <section class="service pad-tb all-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="image-block wow fadeIn">
-						<img src="img/nightlife/service1.jpg" alt="Hosting" class="img-fluid no-shadow" />
+						<img src="img/nightlife/pattaya_pack/img2.jpeg" alt="Hosting" class="img-fluid no-shadow" />
 					</div>
 				</div>
 				<div class="col-lg-8 block-1">
 					<div class="common-heading text-l pl25">
 						<span></span>
 						<h2>Overview</h2>
-						<p class="text-justify">Pattaya, the famous beach city of Thailand has developed a colorful reputation over the past years. It is a convenient place to enjoy both the sun and sea. In recent years, the government is making many efforts to attract families, couples, and bachelors to Pattaya. It remains an entertainment hub for everyone. Also, the kid-friendly attractions like water parks and aquariums make it a touristy place. Customize your package with us according to your needs.</p>
+						<p class="text-justify">Pattaya, the famous beach city of Thailand has developed a colorful
+							reputation over the past years. It is a convenient place to enjoy both the sun and sea. In
+							recent years, the government is making many efforts to attract families, couples, and
+							bachelors to Pattaya. It remains an entertainment hub for everyone. Also, the kid-friendly
+							attractions like water parks and aquariums make it a touristy place. Customize your package
+							with us according to your needs.</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<footer>
 
@@ -289,7 +285,7 @@
 						<!-- <a class="navbar-brand  f-dark-logo" href="#"> <img src="images/logo/icms.png" alt="Logo" /></a>
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
-								<h2>Night Life Tours</h2>
+						<h2>Night Life Tours</h2>
 						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
@@ -308,9 +304,8 @@
 							<li>
 								<span><i class="fas fa-phone-alt"></i></span>
 								<p>Phone <span> <a href="tel:+919600063175" target="_blank">
-									+91 9600063175</a> | <a href="tel:+919551077109" target="_blank">
-									+91 9551077109</a> | <a href="tel:+61 452 283 029" target="_blank">
-									+61 452 283 029</a> </span></p>
+											+91 9600063175</a> | <a href="tel:+919551077109" target="_blank">
+											+91 9551077109</a> </span></p>
 							</li>
 							<div class="d-flex">
 								<!-- <li>
@@ -331,8 +326,7 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-							class="text-primary"><a href="https://pojotechnology.com/" target="_blank">Pojo
-								Technology</a></b></p>
+						class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
 				</div>
 			</div>
 		</div>
