--- a/bali.html
+++ b/bali.html
@@ -30,10 +30,12 @@
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo"><a class="nav-brand" href="index.html">
-						<!-- <img src="images/logo/icms.png" alt="Logo" class="mega-white-logo" />
-						<img src="images/logo/icms.png" alt="Logo" class="mega-darks-logo" /> -->
-						<h2>Night Life Tours</h2>
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-white-logo" />
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-darks-logo" />
 					</a>
+				</div>
+				<div class="site-title">
+					<h4>Night Life Tours</h4>
 				</div>
 				<div class="custom-nav" role="navigation">
 					<ul class="nav-list">
@@ -46,25 +48,24 @@
 						</li>
 
 						<li>
-							<a href="gallery.html" class="menu-links">Gallery</a>
+							<a href="gallery_photo.html" class="menu-links">Gallery Photos</a>
+						</li>
+						<li>
+							<a href="gallery_video.html" class="menu-links">Gallery Videos</a>
 						</li>
 
 						<li class="sbmenu rpdropdown">
-							<a href="#" class="menu-links">Services</a>
+							<a href="#" class="menu-links">Youtube Links</a>
 							<div class="nx-dropdown menu-dorpdown">
 								<div class="sub-menu-section">
 									<div class="sub-menu-center-block">
 										<div class="sub-menu-column smfull">
 											<ul>
-												<li><a href="pattaya.html">Pattaya</a> </li>
-												<li><a href="best_things.html">Best Things to do in Pattaya with your
-														wife</a>
-												</li>
-												<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-												<li><a href="places_avoid.html">Places to avoid when you are with your
-														wife</a> </li>
-
-												<li><a href="bali.html">Bali</a> </li>
+												<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+												<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+												<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+												<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+												<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 											</ul>
 										</div>
 									</div>
@@ -103,19 +104,19 @@
 						<a href="about-us.html">About Us</a>
 					</li>
 					<li>
-						<a href="gallery.html">Gallery</a>
+						<a href="gallery_photo.html">Gallery Photos</a>
 					</li>
-
 					<li>
-						<a href="#">Services</a>
+						<a href="gallery_video.html">Gallery Videos</a>
+					</li>
+					<li>
+						<a href="#">Youtube Links</a>
 						<ul>
-							<li><a href="pattaya.html">Pattaya</a> </li>
-							<li><a href="best_things.html">Best Things to do in Pattaya with your wife</a>
-							</li>
-							<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-							<li><a href="places_avoid.html">Places to avoid when you are with your wife</a> </li>
-
-							<li><a href="bali.html">Bali</a> </li>
+							<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+							<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+							<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+							<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+							<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 						</ul>
 					</li>
 
@@ -148,7 +149,6 @@
 					<div class="media-body getintouchinfo">
 						<a href="tel:+919600063175" target="_blank">+91 9600063175</a>
 						<a href="tel:+919551077109" target="_blank">+91 9551077109</a>
-						<a href="tel:+61 452 283 029" target="_blank">+61 452 283 029</a>
 						<span>Mon-Fri 9am - 6pm</span>
 					</div>
 				</div>
@@ -191,22 +191,7 @@
 		</div>
 	</div>
 
-
-	<section class="breadcrumb-areav2" data-background="">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-7">
-					<div class="bread-titlev2">
-						<h1 class="wow fadeInUp" data-wow-delay=".2s">Bali</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-
-	<section class="service pad-tb all-bg">
+	<section class="service pad-tb all-bg mt60">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
@@ -295,8 +280,7 @@
 								<span><i class="fas fa-phone-alt"></i></span>
 								<p>Phone <span> <a href="tel:+919600063175" target="_blank">
 											+91 9600063175</a> | <a href="tel:+919551077109" target="_blank">
-											+91 9551077109</a> | <a href="tel:+61 452 283 029" target="_blank">
-											+61 452 283 029</a> </span></p>
+											+91 9551077109</a> </span></p>
 							</li>
 							<div class="d-flex">
 								<!-- <li>
@@ -317,8 +301,7 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-							class="text-primary"><a href="https://pojotechnology.com/" target="_blank">Pojo
-								Technology</a></b></p>
+						class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
 				</div>
 			</div>
 		</div>
