--- a/contact-us.html
+++ b/contact-us.html
@@ -30,10 +30,12 @@
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo"><a class="nav-brand" href="index.html">
-						<!-- <img src="images/logo/icms.png" alt="Logo" class="mega-white-logo" />
-						<img src="images/logo/icms.png" alt="Logo" class="mega-darks-logo" /> -->
-						<h2>Night Life Tours</h2>
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-white-logo" />
+						<img src="img/nightlife/logo.png" alt="Logo" class="mega-darks-logo" />
 					</a>
+				</div>
+				<div class="site-title">
+					<h4>Night Life Tours</h4>
 				</div>
 				<div class="custom-nav" role="navigation">
 					<ul class="nav-list">
@@ -45,24 +47,23 @@
 							<a href="about-us.html" class="menu-links">About Us</a>
 						</li>
 						<li>
-							<a href="gallery.html" class="menu-links">Gallery</a>
+							<a href="gallery_photo.html" class="menu-links">Gallery Photos</a>
+						</li>
+						<li>
+							<a href="gallery_video.html" class="menu-links">Gallery Videos</a>
 						</li>
 						<li class="sbmenu rpdropdown">
-							<a href="#" class="menu-links">Services</a>
+							<a href="#" class="menu-links">Youtube Links</a>
 							<div class="nx-dropdown menu-dorpdown">
 								<div class="sub-menu-section">
 									<div class="sub-menu-center-block">
 										<div class="sub-menu-column smfull">
 											<ul>
-												<li><a href="pattaya.html">Pattaya</a> </li>
-												<li><a href="best_things.html">Best Things to do in Pattaya with your
-														wife</a>
-												</li>
-												<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-												<li><a href="places_avoid.html">Places to avoid when you are with your
-														wife</a> </li>
-
-												<li><a href="bali.html">Bali</a> </li>
+												<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+												<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+												<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+												<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+												<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 											</ul>
 										</div>
 									</div>
@@ -101,17 +102,19 @@
 						<a href="about-us.html">About Us</a>
 					</li>
 					<li>
-						<a href="gallery.html" class="menu-links">Gallery</a>
+						<a href="gallery_photo.html">Gallery Photos</a>
 					</li>
 					<li>
-						<a href="#">Services</a>
+						<a href="gallery_video.html">Gallery Videos</a>
+					</li>
+					<li>
+						<a href="#">Youtube Links</a>
 						<ul>
-							<li><a href="pattaya.html">Pattaya</a> </li>
-							<li><a href="best_things.html">Best Things to do in Pattaya with your wife</a>
-							</li>
-							<li><a href="places_pattaya.html">Places to visit in Pattaya</a> </li>
-							<li><a href="places_avoid.html">Places to avoid when you are with your wife</a> </li>
-							<li><a href="bali.html">Bali</a> </li>
+							<li><a href="pattaya.html">Pattaya Package 3Nts 4Days </a> </li>
+							<li><a href="bangkok.html">Pattaya & Bangkok 4Nts 5Days </a></li>
+							<li><a href="phuket.html">Phuket 4Nts & 5Days</a> </li>
+							<li><a href="bali.html">Bali 4Nts & 5Days</a> </li>
+							<li><a href="malaysia.html">Malaysia 3Nts & 4Days</a> </li>
 						</ul>
 					</li>
 					<li>
@@ -140,7 +143,6 @@
 					<div class="media-body getintouchinfo">
 						<a href="tel:+919600063175" target="_blank">+91 9600063175</a>
 						<a href="tel:+919551077109" target="_blank">+91 9551077109</a>
-						<a href="tel:+61 452 283 029" target="_blank">+61 452 283 029</a>
 						<span>Mon-Fri 9am - 6pm</span>
 					</div>
 				</div>
@@ -183,31 +185,7 @@
 		</div>
 	</div>
 
-
-	<section class="breadcrumb-area banner-1" data-background="">
-		<div class="text-block">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 v-center">
-						<div class="bread-inner">
-							<div class="bread-menu">
-								<ul>
-									<li><a href="index.html">Home</a></li>
-									<li><a href="#">Contact Us</a></li>
-								</ul>
-							</div>
-							<div class="bread-title">
-								<h2>Contact Us</h2>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-	<section class="contact-page pad-tb">
+	<section class="contact-page pad-tb mt60">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-5 contact2dv">
@@ -233,7 +211,7 @@
 							<div class="text pl-4">
 								<p><span>Phone:</span> <a href="tel:+919600063175" target="_blank">
 										+91 9600063175</a> <br> <a href="tel:+919551077109" target="_blank">
-										+91 9551077109</a> <br> <a href="tel:+61 452 283 029" target="_blank">+61 452 283 029</a>
+										+91 9551077109</a> <br>
 								</p>
 							</div>
 						</div>
@@ -244,12 +222,18 @@
 							<div class="text pl-4">
 								<p><span>Email:</span> <a
 										href="mailto:nightlifetourschennai@gmail.com">nightlifetourschennai@gmail.com
-
 									</a>
 								</p>
 							</div>
 						</div>
-
+						<div class="footer-social-media-icons contact-icons">
+							<a href="https://www.facebook.com/nightlifetourschennai" target="blank"><img
+									src="img/nightlife/facebook.png"></a>
+							<a href="https://www.instagram.com/harish.chennai.1/" target="blank"><img
+									src="img/nightlife/Instagram_icon.png.webp"></a>
+							<a href="https://www.youtube.com/@NLT327" target="blank"><img
+									src="img/nightlife/youtube.webp"></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-lg-7 m-mt30 pr30 pl30">
@@ -320,7 +304,7 @@
 						<!-- <a class="navbar-brand  f-dark-logo" href="#"> <img src="images/logo/icms.png" alt="Logo" /></a>
 						<a class="navbar-brand  f-white-logo" href="#"> <img src="images/logo/icms.png"
 								alt="Logo" /></a> -->
-								<h2>Night Life Tours</h2>
+						<h2>Night Life Tours</h2>
 						<p>Since 2019, we have been curating the best nightlife experiences across Goa, Thailand, and
 							Malaysia. From lively pubs and energetic discotheques to charming cafes and rejuvenating
 							massages, we bring you unforgettable moments. Book your night adventure with us and explore
@@ -339,9 +323,8 @@
 							<li>
 								<span><i class="fas fa-phone-alt"></i></span>
 								<p>Phone <span> <a href="tel:+919600063175" target="_blank">
-									+91 9600063175</a> | <a href="tel:+919551077109" target="_blank">
-									+91 9551077109</a> | <a href="tel:+61 452 283 029" target="_blank">
-									+61 452 283 029</a> </span></p>
+											+91 9600063175</a> | <a href="tel:+919551077109" target="_blank">
+											+91 9551077109</a> </span></p>
 							</li>
 							<div class="d-flex">
 								<!-- <li>
@@ -362,8 +345,7 @@
 					</div>
 
 					<p class=" border-bottom pb-2 text-justify pt-3  border-2">© 2025 All Rights Reserved By <b
-							class="text-primary"><a href="https://pojotechnology.com/" target="_blank">Pojo
-								Technology</a></b></p>
+						class="text-primary"><a href="https://nightlifetours.in/" target="_blank">Night Life Tours</a></b></p>
 				</div>
 			</div>
 		</div>
